--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="local_host">http://192.168.1.60:3000</string>
+<!--    <string name="local_host">http://192.168.1.8:3000</string>-->
+
 
 
 </resources>
